fixed weird issue with buttons on firefox on linux

--- a/main.css
+++ b/main.css
@@ -1,9 +1,3 @@
-:root {
-    --main-bg-color: #9ed0e6;
-    --main-txt-color: #black;
-    --hover-button-color: #349ECB;
-}
-
 /* Galaxy S9 Portrait */
 * {
     box-sizing: border-box;
@@ -198,6 +192,8 @@ h1 {
     font-size: 2vh;
 
     border-radius: 15px;
+
+    background-color: white;
 }
 
 /* Representative Card */
@@ -423,8 +419,6 @@ button:hover {
         margin-right: auto;
         margin-top: 5vh;
 
-        background-color: blue;
-
         box-shadow: 8px 8px black ;
 
         overflow: hidden;
@@ -480,6 +474,7 @@ button:hover {
 
     .js-rep-button:hover, .js-rep-button:focus, .js-splash button:hover, #js-form button:hover {
         color: red;
+        background-color: #f2f1f0;
     }
 
     #js-left:hover, #js-right:hover {
